
[Test_Application_Health/should_return_200_if_PING_to_DB_is_ok - 1]
{
 "status": "OK"
}
---

[Test_Application_Health/should_return_503_if_PING_to_DB_fails - 1]
{
 "status": "service unavailable"
}
---

[Test_Application_UserCreate/should_return_201_if_user_is_created_on_DB - 1]
{
 "email": "danielmorenolevy@gmail.com",
 "id": 1,
 "name": "Daniel Levy Moreno"
}
---

[Test_Application_UserCreate/should_return_422_if_user_is_malformed - 1]
{
 "error": "bad entity"
}
---

[Test_Application_UserCreate/should_return_409_if_email_is_already_is_in_used - 1]
{
 "error": "user already exists"
}
---

[Test_Application_UserCreate/should_return_503_if_unknown_error_occurs - 1]
{
 "error": "service unavailable"
}
---

[Test_Application_UserGetAll/should_return_200_with_all_data - 1]
[
 {
  "email": "johnnydoe@gmail.com",
  "id": 1,
  "name": "John Doe"
 },
 {
  "email": "danielmorenolevy@gmail.com",
  "id": 2,
  "name": "Daniel Levy Moreno"
 }
]
---

[Test_Application_UserGetAll/should_return_200_with_all_data_when_empty - 1]
[]
---

[Test_Application_UserGetAll/should_return_503_when_unexpected_error_happens - 1]
{
 "error": "service unavailable"
}
---
